--- a/src/templates/admin/login.html
+++ b/src/templates/admin/login.html
@@ -193,6 +193,9 @@
                                 <i class="fas fa-lock"></i>
                             </span>
                             <input type="password" class="form-control" name="password" id="password" placeholder="Nhập mật khẩu" required>
+                            <span class="input-group-text password-toggle" id="togglePassword">
+                                <i class="fas fa-eye"></i>
+                            </span>
                         </div>
                     </div>
                     
@@ -228,7 +231,6 @@
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
     <script>
         $(document).ready(function() {
             // Click demo account to auto-fill
@@ -237,6 +239,21 @@
                 const password = $(this).data('password');
                 $('#username').val(username);
                 $('#password').val(password);
+            });
+
+            $('#togglePassword').click(function() {
+                const passwordInput = $('#password');
+                const icon = $(this).find('i');
+                
+                if (passwordInput.attr('type') === 'password') {
+                    passwordInput.attr('type', 'text');
+                    icon.removeClass('fa-eye');
+                    icon.addClass('fa-eye-slash');
+                } else {
+                    passwordInput.attr('type', 'password');
+                    icon.removeClass('fa-eye-slash');
+                    icon.addClass('fa-eye');
+                }
             });
         });
     </script>
