--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -404,6 +404,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="content-section" id="menu-manager">
+            {% include 'admin/menu-manager.html' %}
+        </div>
     </div>
 
     <!-- International Articles Section -->
