Hide button sub-menu

--- a/src/templates/admin/menu-manager.html
+++ b/src/templates/admin/menu-manager.html
@@ -7,9 +7,9 @@
                 <button class="btn btn-success me-2" id="addMenuBtn">
                     <i class="fas fa-plus"></i> Thêm Menu
                 </button>
-                <button class="btn btn-warning me-2" id="addSubmenuBtn">
+                <!-- <button class="btn btn-warning me-2" id="addSubmenuBtn">
                     <i class="fas fa-plus-circle"></i> Thêm Submenu
-                </button>
+                </button> -->
                 <button class="btn btn-danger" id="resetMenuBtn">
                     <i class="fas fa-redo"></i> Reset về mặc định
                 </button>
