--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -536,23 +536,27 @@
     </div>
 
     <!-- Article Preview Modal -->
-    <div class="modal fade" id="previewModal" tabindex="-1">
-        <div class="modal-dialog modal-xl">
+    <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Xem trước bài viết</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <h5 class="modal-title" id="previewModalLabel">
+                        <i class="fas fa-eye me-2"></i>Xem trước bài viết
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
                 </div>
                 <div class="modal-body" id="previewContent">
                     <!-- Preview content will be loaded here -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                    <button type="button" class="btn btn-danger" id="rejectBtn">
-                        <i class="fas fa-times"></i> Từ chối
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        <i class="fas fa-times me-1"></i>Đóng
                     </button>
-                    <button type="button" class="btn btn-success" id="approveBtn">
-                        <i class="fas fa-check"></i> Duyệt bài
+                    <button type="button" class="btn btn-danger" id="rejectBtn" style="display: none;">
+                        <i class="fas fa-times me-1"></i>Từ chối
+                    </button>
+                    <button type="button" class="btn btn-success" id="approveBtn" style="display: none;">
+                        <i class="fas fa-check me-1"></i>Duyệt bài
                     </button>
                 </div>
             </div>
