--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -536,11 +536,11 @@
     </div>
 
     <!-- Article Preview Modal -->
-    <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-scrollable">
+    <div class="modal fade" id="previewArticleModal" tabindex="-1" aria-labelledby="previewArticleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="previewModalLabel">
+                    <h5 class="modal-title" id="previewArticleModalLabel">
                         <i class="fas fa-eye me-2"></i>Xem trước bài viết
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
