--- a/src/templates/admin/editor-dashboard.html
+++ b/src/templates/admin/editor-dashboard.html
@@ -1,8 +1,8 @@
 {% extends 'base_admin.html' %}
 {% block title %}Dashboard - VnNews Editor{% endblock %}
 {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_admin.css') }}">
-{% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_admin.css') }}">    <!-- Summernote CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">{% endblock %}
 {% block template %}
     <!-- Sidebar -->
     <div class="sidebar">
